# solana-ua-bootcamp-2024-08-06

./: .gitignore  flake.nix
practice-1/rust-exercises/: Cargo.toml  readme.md
practice-1/rust-exercises/src/: cli.rs  lib.rs  main.rs  solana.rs
practice-1/typescript-exercises/: package.json  pnpm-lock.yaml
practice-1/typescript-exercises/src/: check-balance.ts  generate-keypair.ts  load-keypair.ts
practice-2/rust-exercises/: Cargo.toml  readme.md
practice-2/rust-exercises/src/: cli.rs  main.rs
practice-2/rust-exercises/src/commands/: create_token_account.rs  create_token_metadata.rs  create_token_mint.rs  mint_tokens.rs  mod.rs  send_sol.rs
practice-2/typescript-exercises/: .gitignore  package.json  pnpm-lock.yaml
practice-2/typescript-exercises/src/: create-token-account.ts  create-token-metadata.ts  create-token-mint.ts  mint-token-multisig.ts  mint-tokens.ts  send-sol.ts  send-tokens-partial-sign-nonce.ts  send-tokens-partial-sign.ts
practice-2/typescript-exercises/src/lib/: utilts.ts
practice-3/escrow/: Anchor.toml  package.json  readme.md  tsconfig.json
practice-3/escrow/programs/escrow/src/: lib.rs
practice-3/escrow/tests/: escrow.test.ts
practice-3/escrow_approve/: Anchor.toml  package.json  pnpm-lock.yaml  readme.md
practice-3/escrow_approve/programs/escrow_approve/src/: error.rs  lib.rs
practice-3/escrow_approve/tests/: escrow.test.ts  system-programs-errors.ts
practice-3/favorites/: Anchor.toml  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
practice-3/favorites/tests/: favorites.spec.ts
(+7 files in other folders)
